lab5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> assignment
Rule 7     instruction -> if_stmt
Rule 8     instruction -> loops
Rule 9     instruction -> break
Rule 10    instruction -> continue
Rule 11    instruction -> return_expr ;
Rule 12    instruction -> PRINT create_stmt ;
Rule 13    instruction -> { instructions }
Rule 14    continue -> CONTINUE ;
Rule 15    break -> BREAK ;
Rule 16    id_change -> ID
Rule 17    id_change -> ID [ expression , expression ]
Rule 18    id_change -> ID [ expression ]
Rule 19    assignment -> id_change = expression ;
Rule 20    assignment -> id_change ADDASSIGN expression ;
Rule 21    assignment -> id_change SUBASSIGN expression ;
Rule 22    assignment -> id_change MULASSIGN expression ;
Rule 23    assignment -> id_change DIVASSIGN expression ;
Rule 24    assignment -> id_change = id_change ;
Rule 25    assignment -> id_change ADDASSIGN id_change ;
Rule 26    assignment -> id_change SUBASSIGN id_change ;
Rule 27    assignment -> id_change MULASSIGN id_change ;
Rule 28    assignment -> id_change DIVASSIGN id_change ;
Rule 29    expression -> expression ADD expression
Rule 30    expression -> expression MINUS expression
Rule 31    expression -> expression MUL expression
Rule 32    expression -> expression DIVIDE expression
Rule 33    expression -> MINUS expression
Rule 34    expression -> ID '
Rule 35    expression -> expression DOTADD expression
Rule 36    expression -> expression DOTSUB expression
Rule 37    expression -> expression DOTMUL expression
Rule 38    expression -> expression DOTDIVIDE expression
Rule 39    expression -> matrix_expression
Rule 40    expression -> matrix_create
Rule 41    expression -> vector_create
Rule 42    expression -> INTNUM
Rule 43    expression -> FLOAT
Rule 44    expression -> ID
Rule 45    matrix_expression -> ZEROS ( expression )
Rule 46    matrix_expression -> ONES ( expression )
Rule 47    matrix_expression -> EYE ( expression )
Rule 48    matrix_create -> [ matrix_rows ]
Rule 49    vector_create -> [ vector_elems ]
Rule 50    vector_elems -> expression , vector_elems
Rule 51    vector_elems -> expression
Rule 52    matrix_rows -> [ matrix_elems ] , matrix_rows
Rule 53    matrix_rows -> [ matrix_elems ]
Rule 54    matrix_elems -> expression , matrix_elems
Rule 55    matrix_elems -> expression
Rule 56    condition -> expression GREATER expression
Rule 57    condition -> expression LESS expression
Rule 58    condition -> expression GREATEREQ expression
Rule 59    condition -> expression LESSEQ expression
Rule 60    condition -> expression NOTEQ expression
Rule 61    condition -> expression EQ expression
Rule 62    if_stmt -> IF ( condition ) instruction
Rule 63    if_stmt -> IF ( condition ) instruction ELSE instruction
Rule 64    create_stmt -> p_print_list
Rule 65    p_print_list -> STRING
Rule 66    p_print_list -> p_print_list , expression
Rule 67    p_print_list -> expression
Rule 68    loops -> while_l
Rule 69    loops -> for_l
Rule 70    while_l -> WHILE ( condition ) instruction
Rule 71    for_l -> FOR ID = expression : expression instruction
Rule 72    return_expr -> RETURN
Rule 73    return_expr -> RETURN expression

Terminals, with rules where they appear

'                    : 34
(                    : 45 46 47 62 63 70
)                    : 45 46 47 62 63 70
,                    : 17 50 52 54 66
:                    : 71
;                    : 11 12 14 15 19 20 21 22 23 24 25 26 27 28
=                    : 19 24 71
ADD                  : 29
ADDASSIGN            : 20 25
BREAK                : 15
CONTINUE             : 14
DIVASSIGN            : 23 28
DIVIDE               : 32
DOTADD               : 35
DOTDIVIDE            : 38
DOTMUL               : 37
DOTSUB               : 36
ELSE                 : 63
EQ                   : 61
EYE                  : 47
FLOAT                : 43
FOR                  : 71
GREATER              : 56
GREATEREQ            : 58
ID                   : 16 17 18 34 44 71
IF                   : 62 63
INTNUM               : 42
LESS                 : 57
LESSEQ               : 59
MINUS                : 30 33
MUL                  : 31
MULASSIGN            : 22 27
NOTEQ                : 60
ONES                 : 46
PRINT                : 12
RETURN               : 72 73
STRING               : 65
SUBASSIGN            : 21 26
WHILE                : 70
ZEROS                : 45
[                    : 17 18 48 49 52 53
]                    : 17 18 48 49 52 53
error                : 
{                    : 13
}                    : 13

Nonterminals, with rules where they appear

assignment           : 6
break                : 9
condition            : 62 63 70
continue             : 10
create_stmt          : 12
expression           : 17 17 18 19 20 21 22 23 29 29 30 30 31 31 32 32 33 35 35 36 36 37 37 38 38 45 46 47 50 51 54 55 56 56 57 57 58 58 59 59 60 60 61 61 66 67 71 71 73
for_l                : 69
id_change            : 19 20 21 22 23 24 24 25 25 26 26 27 27 28 28
if_stmt              : 7
instruction          : 4 5 62 63 63 70 71
instructions         : 2 4 13
instructions_opt     : 1
loops                : 8
matrix_create        : 40
matrix_elems         : 52 53 54
matrix_expression    : 39
matrix_rows          : 48 52
p_print_list         : 64 66
program              : 0
return_expr          : 11
vector_create        : 41
vector_elems         : 49 50
while_l              : 68

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . assignment
    (7) instruction -> . if_stmt
    (8) instruction -> . loops
    (9) instruction -> . break
    (10) instruction -> . continue
    (11) instruction -> . return_expr ;
    (12) instruction -> . PRINT create_stmt ;
    (13) instruction -> . { instructions }
    (19) assignment -> . id_change = expression ;
    (20) assignment -> . id_change ADDASSIGN expression ;
    (21) assignment -> . id_change SUBASSIGN expression ;
    (22) assignment -> . id_change MULASSIGN expression ;
    (23) assignment -> . id_change DIVASSIGN expression ;
    (24) assignment -> . id_change = id_change ;
    (25) assignment -> . id_change ADDASSIGN id_change ;
    (26) assignment -> . id_change SUBASSIGN id_change ;
    (27) assignment -> . id_change MULASSIGN id_change ;
    (28) assignment -> . id_change DIVASSIGN id_change ;
    (62) if_stmt -> . IF ( condition ) instruction
    (63) if_stmt -> . IF ( condition ) instruction ELSE instruction
    (68) loops -> . while_l
    (69) loops -> . for_l
    (15) break -> . BREAK ;
    (14) continue -> . CONTINUE ;
    (72) return_expr -> . RETURN
    (73) return_expr -> . RETURN expression
    (16) id_change -> . ID
    (17) id_change -> . ID [ expression , expression ]
    (18) id_change -> . ID [ expression ]
    (70) while_l -> . WHILE ( condition ) instruction
    (71) for_l -> . FOR ID = expression : expression instruction

    $end            reduce using rule 3 (instructions_opt -> .)
    PRINT           shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 14
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    ID              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    assignment                     shift and go to state 5
    if_stmt                        shift and go to state 6
    loops                          shift and go to state 7
    break                          shift and go to state 8
    continue                       shift and go to state 9
    return_expr                    shift and go to state 10
    id_change                      shift and go to state 13
    while_l                        shift and go to state 15
    for_l                          shift and go to state 16

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . assignment
    (7) instruction -> . if_stmt
    (8) instruction -> . loops
    (9) instruction -> . break
    (10) instruction -> . continue
    (11) instruction -> . return_expr ;
    (12) instruction -> . PRINT create_stmt ;
    (13) instruction -> . { instructions }
    (19) assignment -> . id_change = expression ;
    (20) assignment -> . id_change ADDASSIGN expression ;
    (21) assignment -> . id_change SUBASSIGN expression ;
    (22) assignment -> . id_change MULASSIGN expression ;
    (23) assignment -> . id_change DIVASSIGN expression ;
    (24) assignment -> . id_change = id_change ;
    (25) assignment -> . id_change ADDASSIGN id_change ;
    (26) assignment -> . id_change SUBASSIGN id_change ;
    (27) assignment -> . id_change MULASSIGN id_change ;
    (28) assignment -> . id_change DIVASSIGN id_change ;
    (62) if_stmt -> . IF ( condition ) instruction
    (63) if_stmt -> . IF ( condition ) instruction ELSE instruction
    (68) loops -> . while_l
    (69) loops -> . for_l
    (15) break -> . BREAK ;
    (14) continue -> . CONTINUE ;
    (72) return_expr -> . RETURN
    (73) return_expr -> . RETURN expression
    (16) id_change -> . ID
    (17) id_change -> . ID [ expression , expression ]
    (18) id_change -> . ID [ expression ]
    (70) while_l -> . WHILE ( condition ) instruction
    (71) for_l -> . FOR ID = expression : expression instruction

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    PRINT           shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 14
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    ID              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22

    instruction                    shift and go to state 23
    assignment                     shift and go to state 5
    if_stmt                        shift and go to state 6
    loops                          shift and go to state 7
    break                          shift and go to state 8
    continue                       shift and go to state 9
    return_expr                    shift and go to state 10
    id_change                      shift and go to state 13
    while_l                        shift and go to state 15
    for_l                          shift and go to state 16

state 4

    (5) instructions -> instruction .

    PRINT           reduce using rule 5 (instructions -> instruction .)
    {               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> assignment .

    PRINT           reduce using rule 6 (instruction -> assignment .)
    {               reduce using rule 6 (instruction -> assignment .)
    IF              reduce using rule 6 (instruction -> assignment .)
    BREAK           reduce using rule 6 (instruction -> assignment .)
    CONTINUE        reduce using rule 6 (instruction -> assignment .)
    RETURN          reduce using rule 6 (instruction -> assignment .)
    ID              reduce using rule 6 (instruction -> assignment .)
    WHILE           reduce using rule 6 (instruction -> assignment .)
    FOR             reduce using rule 6 (instruction -> assignment .)
    $end            reduce using rule 6 (instruction -> assignment .)
    }               reduce using rule 6 (instruction -> assignment .)
    ELSE            reduce using rule 6 (instruction -> assignment .)


state 6

    (7) instruction -> if_stmt .

    PRINT           reduce using rule 7 (instruction -> if_stmt .)
    {               reduce using rule 7 (instruction -> if_stmt .)
    IF              reduce using rule 7 (instruction -> if_stmt .)
    BREAK           reduce using rule 7 (instruction -> if_stmt .)
    CONTINUE        reduce using rule 7 (instruction -> if_stmt .)
    RETURN          reduce using rule 7 (instruction -> if_stmt .)
    ID              reduce using rule 7 (instruction -> if_stmt .)
    WHILE           reduce using rule 7 (instruction -> if_stmt .)
    FOR             reduce using rule 7 (instruction -> if_stmt .)
    $end            reduce using rule 7 (instruction -> if_stmt .)
    }               reduce using rule 7 (instruction -> if_stmt .)
    ELSE            reduce using rule 7 (instruction -> if_stmt .)


state 7

    (8) instruction -> loops .

    PRINT           reduce using rule 8 (instruction -> loops .)
    {               reduce using rule 8 (instruction -> loops .)
    IF              reduce using rule 8 (instruction -> loops .)
    BREAK           reduce using rule 8 (instruction -> loops .)
    CONTINUE        reduce using rule 8 (instruction -> loops .)
    RETURN          reduce using rule 8 (instruction -> loops .)
    ID              reduce using rule 8 (instruction -> loops .)
    WHILE           reduce using rule 8 (instruction -> loops .)
    FOR             reduce using rule 8 (instruction -> loops .)
    $end            reduce using rule 8 (instruction -> loops .)
    }               reduce using rule 8 (instruction -> loops .)
    ELSE            reduce using rule 8 (instruction -> loops .)


state 8

    (9) instruction -> break .

    PRINT           reduce using rule 9 (instruction -> break .)
    {               reduce using rule 9 (instruction -> break .)
    IF              reduce using rule 9 (instruction -> break .)
    BREAK           reduce using rule 9 (instruction -> break .)
    CONTINUE        reduce using rule 9 (instruction -> break .)
    RETURN          reduce using rule 9 (instruction -> break .)
    ID              reduce using rule 9 (instruction -> break .)
    WHILE           reduce using rule 9 (instruction -> break .)
    FOR             reduce using rule 9 (instruction -> break .)
    $end            reduce using rule 9 (instruction -> break .)
    }               reduce using rule 9 (instruction -> break .)
    ELSE            reduce using rule 9 (instruction -> break .)


state 9

    (10) instruction -> continue .

    PRINT           reduce using rule 10 (instruction -> continue .)
    {               reduce using rule 10 (instruction -> continue .)
    IF              reduce using rule 10 (instruction -> continue .)
    BREAK           reduce using rule 10 (instruction -> continue .)
    CONTINUE        reduce using rule 10 (instruction -> continue .)
    RETURN          reduce using rule 10 (instruction -> continue .)
    ID              reduce using rule 10 (instruction -> continue .)
    WHILE           reduce using rule 10 (instruction -> continue .)
    FOR             reduce using rule 10 (instruction -> continue .)
    $end            reduce using rule 10 (instruction -> continue .)
    }               reduce using rule 10 (instruction -> continue .)
    ELSE            reduce using rule 10 (instruction -> continue .)


state 10

    (11) instruction -> return_expr . ;

    ;               shift and go to state 24


state 11

    (12) instruction -> PRINT . create_stmt ;
    (64) create_stmt -> . p_print_list
    (65) p_print_list -> . STRING
    (66) p_print_list -> . p_print_list , expression
    (67) p_print_list -> . expression
    (29) expression -> . expression ADD expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression MUL expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . MINUS expression
    (34) expression -> . ID '
    (35) expression -> . expression DOTADD expression
    (36) expression -> . expression DOTSUB expression
    (37) expression -> . expression DOTMUL expression
    (38) expression -> . expression DOTDIVIDE expression
    (39) expression -> . matrix_expression
    (40) expression -> . matrix_create
    (41) expression -> . vector_create
    (42) expression -> . INTNUM
    (43) expression -> . FLOAT
    (44) expression -> . ID
    (45) matrix_expression -> . ZEROS ( expression )
    (46) matrix_expression -> . ONES ( expression )
    (47) matrix_expression -> . EYE ( expression )
    (48) matrix_create -> . [ matrix_rows ]
    (49) vector_create -> . [ vector_elems ]

    STRING          shift and go to state 27
    MINUS           shift and go to state 29
    ID              shift and go to state 30
    INTNUM          shift and go to state 34
    FLOAT           shift and go to state 35
    ZEROS           shift and go to state 36
    ONES            shift and go to state 37
    EYE             shift and go to state 38
    [               shift and go to state 39

    create_stmt                    shift and go to state 25
    p_print_list                   shift and go to state 26
    expression                     shift and go to state 28
    matrix_expression              shift and go to state 31
    matrix_create                  shift and go to state 32
    vector_create                  shift and go to state 33

state 12

    (13) instruction -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . assignment
    (7) instruction -> . if_stmt
    (8) instruction -> . loops
    (9) instruction -> . break
    (10) instruction -> . continue
    (11) instruction -> . return_expr ;
    (12) instruction -> . PRINT create_stmt ;
    (13) instruction -> . { instructions }
    (19) assignment -> . id_change = expression ;
    (20) assignment -> . id_change ADDASSIGN expression ;
    (21) assignment -> . id_change SUBASSIGN expression ;
    (22) assignment -> . id_change MULASSIGN expression ;
    (23) assignment -> . id_change DIVASSIGN expression ;
    (24) assignment -> . id_change = id_change ;
    (25) assignment -> . id_change ADDASSIGN id_change ;
    (26) assignment -> . id_change SUBASSIGN id_change ;
    (27) assignment -> . id_change MULASSIGN id_change ;
    (28) assignment -> . id_change DIVASSIGN id_change ;
    (62) if_stmt -> . IF ( condition ) instruction
    (63) if_stmt -> . IF ( condition ) instruction ELSE instruction
    (68) loops -> . while_l
    (69) loops -> . for_l
    (15) break -> . BREAK ;
    (14) continue -> . CONTINUE ;
    (72) return_expr -> . RETURN
    (73) return_expr -> . RETURN expression
    (16) id_change -> . ID
    (17) id_change -> . ID [ expression , expression ]
    (18) id_change -> . ID [ expression ]
    (70) while_l -> . WHILE ( condition ) instruction
    (71) for_l -> . FOR ID = expression : expression instruction

    PRINT           shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 14
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    ID              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22

    instructions                   shift and go to state 40
    instruction                    shift and go to state 4
    assignment                     shift and go to state 5
    if_stmt                        shift and go to state 6
    loops                          shift and go to state 7
    break                          shift and go to state 8
    continue                       shift and go to state 9
    return_expr                    shift and go to state 10
    id_change                      shift and go to state 13
    while_l                        shift and go to state 15
    for_l                          shift and go to state 16

state 13

    (19) assignment -> id_change . = expression ;
    (20) assignment -> id_change . ADDASSIGN expression ;
    (21) assignment -> id_change . SUBASSIGN expression ;
    (22) assignment -> id_change . MULASSIGN expression ;
    (23) assignment -> id_change . DIVASSIGN expression ;
    (24) assignment -> id_change . = id_change ;
    (25) assignment -> id_change . ADDASSIGN id_change ;
    (26) assignment -> id_change . SUBASSIGN id_change ;
    (27) assignment -> id_change . MULASSIGN id_change ;
    (28) assignment -> id_change . DIVASSIGN id_change ;

    =               shift and go to state 41
    ADDASSIGN       shift and go to state 42
    SUBASSIGN       shift and go to state 43
    MULASSIGN       shift and go to state 44
    DIVASSIGN       shift and go to state 45


state 14

    (62) if_stmt -> IF . ( condition ) instruction
    (63) if_stmt -> IF . ( condition ) instruction ELSE instruction

    (               shift and go to state 46


state 15

    (68) loops -> while_l .

    PRINT           reduce using rule 68 (loops -> while_l .)
    {               reduce using rule 68 (loops -> while_l .)
    IF              reduce using rule 68 (loops -> while_l .)
    BREAK           reduce using rule 68 (loops -> while_l .)
    CONTINUE        reduce using rule 68 (loops -> while_l .)
    RETURN          reduce using rule 68 (loops -> while_l .)
    ID              reduce using rule 68 (loops -> while_l .)
    WHILE           reduce using rule 68 (loops -> while_l .)
    FOR             reduce using rule 68 (loops -> while_l .)
    $end            reduce using rule 68 (loops -> while_l .)
    }               reduce using rule 68 (loops -> while_l .)
    ELSE            reduce using rule 68 (loops -> while_l .)


state 16

    (69) loops -> for_l .

    PRINT           reduce using rule 69 (loops -> for_l .)
    {               reduce using rule 69 (loops -> for_l .)
    IF              reduce using rule 69 (loops -> for_l .)
    BREAK           reduce using rule 69 (loops -> for_l .)
    CONTINUE        reduce using rule 69 (loops -> for_l .)
    RETURN          reduce using rule 69 (loops -> for_l .)
    ID              reduce using rule 69 (loops -> for_l .)
    WHILE           reduce using rule 69 (loops -> for_l .)
    FOR             reduce using rule 69 (loops -> for_l .)
    $end            reduce using rule 69 (loops -> for_l .)
    }               reduce using rule 69 (loops -> for_l .)
    ELSE            reduce using rule 69 (loops -> for_l .)


state 17

    (15) break -> BREAK . ;

    ;               shift and go to state 47


state 18

    (14) continue -> CONTINUE . ;

    ;               shift and go to state 48


state 19

    (72) return_expr -> RETURN .
    (73) return_expr -> RETURN . expression
    (29) expression -> . expression ADD expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression MUL expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . MINUS expression
    (34) expression -> . ID '
    (35) expression -> . expression DOTADD expression
    (36) expression -> . expression DOTSUB expression
    (37) expression -> . expression DOTMUL expression
    (38) expression -> . expression DOTDIVIDE expression
    (39) expression -> . matrix_expression
    (40) expression -> . matrix_create
    (41) expression -> . vector_create
    (42) expression -> . INTNUM
    (43) expression -> . FLOAT
    (44) expression -> . ID
    (45) matrix_expression -> . ZEROS ( expression )
    (46) matrix_expression -> . ONES ( expression )
    (47) matrix_expression -> . EYE ( expression )
    (48) matrix_create -> . [ matrix_rows ]
    (49) vector_create -> . [ vector_elems ]

    ;               reduce using rule 72 (return_expr -> RETURN .)
    MINUS           shift and go to state 29
    ID              shift and go to state 30
    INTNUM          shift and go to state 34
    FLOAT           shift and go to state 35
    ZEROS           shift and go to state 36
    ONES            shift and go to state 37
    EYE             shift and go to state 38
    [               shift and go to state 39

    expression                     shift and go to state 49
    matrix_expression              shift and go to state 31
    matrix_create                  shift and go to state 32
    vector_create                  shift and go to state 33

state 20

    (16) id_change -> ID .
    (17) id_change -> ID . [ expression , expression ]
    (18) id_change -> ID . [ expression ]

    =               reduce using rule 16 (id_change -> ID .)
    ADDASSIGN       reduce using rule 16 (id_change -> ID .)
    SUBASSIGN       reduce using rule 16 (id_change -> ID .)
    MULASSIGN       reduce using rule 16 (id_change -> ID .)
    DIVASSIGN       reduce using rule 16 (id_change -> ID .)
    [               shift and go to state 50


state 21

    (70) while_l -> WHILE . ( condition ) instruction

    (               shift and go to state 51


state 22

    (71) for_l -> FOR . ID = expression : expression instruction

    ID              shift and go to state 52


state 23

    (4) instructions -> instructions instruction .

    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    {               reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 24

    (11) instruction -> return_expr ; .

    PRINT           reduce using rule 11 (instruction -> return_expr ; .)
    {               reduce using rule 11 (instruction -> return_expr ; .)
    IF              reduce using rule 11 (instruction -> return_expr ; .)
    BREAK           reduce using rule 11 (instruction -> return_expr ; .)
    CONTINUE        reduce using rule 11 (instruction -> return_expr ; .)
    RETURN          reduce using rule 11 (instruction -> return_expr ; .)
    ID              reduce using rule 11 (instruction -> return_expr ; .)
    WHILE           reduce using rule 11 (instruction -> return_expr ; .)
    FOR             reduce using rule 11 (instruction -> return_expr ; .)
    $end            reduce using rule 11 (instruction -> return_expr ; .)
    }               reduce using rule 11 (instruction -> return_expr ; .)
    ELSE            reduce using rule 11 (instruction -> return_expr ; .)


state 25

    (12) instruction -> PRINT create_stmt . ;

    ;               shift and go to state 53


state 26

    (64) create_stmt -> p_print_list .
    (66) p_print_list -> p_print_list . , expression

    ;               reduce using rule 64 (create_stmt -> p_print_list .)
    ,               shift and go to state 54


state 27

    (65) p_print_list -> STRING .

    ,               reduce using rule 65 (p_print_list -> STRING .)
    ;               reduce using rule 65 (p_print_list -> STRING .)


state 28
